// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
     
  </h1>
</div>
`;

exports[`Should correctly render expenses summary with multiple expenses  1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $4.56
     
  </h1>
</div>
`;
